create download folder and add update_file_pass support

--- a/tools.ini
+++ b/tools.ini
@@ -22,3 +22,12 @@ local_version = 0
 re_version = Build: <span style="font-weight:bold">(.*?)</span>
 re_download = href="(.*?artifacts/processhacker-(?:\S+)-bin.zip)
 
+[ProcDOT]
+folder = Other\ProcDOT
+url = https://www.procdot.com/downloadprocdotbinaries.htm
+update_url = https://www.procdot.com/
+update_file_pass = procdot
+from = web
+local_version = 1.22 (Build 57)
+re_version = <span class="xr_tl xr_s4" [^>]*>Latest stable build: (.*?)</span>
+re_download = href="(.*?/procdot_(?:\S+)_windows.zip)
