--- a/tools.ini
+++ b/tools.ini
@@ -28,6 +28,6 @@ url = https://www.procdot.com/downloadprocdotbinaries.htm
 update_url = https://www.procdot.com/
 update_file_pass = procdot
 from = web
-local_version = 1.22 (Build 57)
+local_version = 0
 re_version = <span class="xr_tl xr_s4" [^>]*>Latest stable build: (.*?)</span>
 re_download = href="(.*?/procdot_(?:\S+)_windows.zip)
