Misc - Update tools.ini

--- a/tools.ini
+++ b/tools.ini
@@ -15,7 +15,7 @@ re_version = <h1 [^>]*>Portmon for Windows v(.*?)</h1>
 folder = Monitor\Process Hacker 3
 url = https://processhacker.sourceforge.io/nightly.php
 re_version = Build: <span style="font-weight:bold">(.*?)</span>
-re_download = href="(.*?artifacts/processhacker-(?:\S+)-bin.zip)
+re_download = href="(.*?releases/download/(?:\S+)/processhacker-build-bin.zip)
 
 [ProcDOT]
 folder = Other\ProcDOT
