Misc - Update tools.ini github regex

--- a/tools.ini
+++ b/tools.ini
@@ -2,7 +2,7 @@
 folder = Analysis\DIE
 url = https://github.com/horsicq/DIE-engine
 from = github
-re_version = <span class="css-truncate-target" [^>]*>(.*?)</span>
+re_version = \/releases\/tag\/(\S+)"
 re_download = "(.*?/die_win64_portable_(?:\S+).zip)"
 
 [Portmon]
