Docs - Update docs

--- a/tools.ini
+++ b/tools.ini
@@ -1,9 +1,8 @@
 [DIE]
 folder = Analysis\DIE
-url = https://github.com/horsicq/DIE-engine
+url = horsicq/DIE-engine
 from = github
-re_version = \/releases\/tag\/(\S+)"
-re_download = "(.*?/die_win64_portable_(?:\S+).zip)"
+re_download = die_win64_portable_(?:\S+).zip
 
 [Portmon]
 folder = Monitor\Portmon
@@ -15,7 +14,7 @@ re_version = <h1 [^>]*>Portmon for Windows v(.*?)</h1>
 folder = Monitor\Process Hacker 3
 url = https://processhacker.sourceforge.io/nightly.php
 re_version = Build: <span style="font-weight:bold">(.*?)</span>
-re_download = href="(.*?releases/download/(?:\S+)/processhacker-build-bin.zip)
+re_download = href="(.*?releases/download/(?:\S+)/processhacker-(?:\S+)-bin.zip)
 
 [ProcDOT]
 folder = Other\ProcDOT
