Add new 'http' param for 'from' param

--- a/tools.ini
+++ b/tools.ini
@@ -1,26 +1,31 @@
 [DIE]
-folder = Analysis\DIE
+folder = Tools\Analysis\DIE
 url = horsicq/DIE-engine
 from = github
 re_download = die_win64_portable_(?:\S+).zip
 
 [Portmon]
-folder = Monitor\Portmon
+folder = Tools\Monitor\Portmon
 url = https://docs.microsoft.com/en-us/sysinternals/downloads/portmon
 update_url = https://download.sysinternals.com/files/PortMon.zip
 re_version = <h1 [^>]*>Portmon for Windows v(.*?)</h1>
 
 [Process Hacker 3]
-folder = Monitor\Process Hacker 3
+folder = Tools\Monitor\Process Hacker 3
 url = https://processhacker.sourceforge.io/nightly.php
 re_version = Build: <span style="font-weight:bold">(.*?)</span>
 re_download = href="(.*?releases/download/(?:\S+)/processhacker-(?:\S+)-bin.zip)
 
 [ProcDOT]
-folder = Other\ProcDOT
+folder = Tools\Other\ProcDOT
 url = https://www.procdot.com/downloadprocdotbinaries.htm
 update_url = https://www.procdot.com/
 update_file_pass = procdot
 from = web
 re_version = <span class="xr_tl xr_s4" [^>]*>Latest stable build: (.*?)</span>
 re_download = href="(.*?/procdot_(?:\S+)_windows.zip)
+
+[FileInsight]
+folder = Tools\Other\FileInsight
+update_url = https://downloadcenter.mcafee.com/products/mcafee-avert/fileinsight.msi
+from = http
