--- a/tools.ini
+++ b/tools.ini
@@ -10,11 +10,11 @@ url = https://docs.microsoft.com/en-us/sysinternals/downloads/portmon
 update_url = https://download.sysinternals.com/files/PortMon.zip
 re_version = <h1 [^>]*>Portmon for Windows v(.*?)</h1>
 
-[Process Hacker 3]
-folder = Tools\Monitor\Process Hacker 3
-url = https://processhacker.sourceforge.io/nightly.php
-re_version = Build: <span style="font-weight:bold">(.*?)</span>
-re_download = href="(.*?releases/download/(?:\S+)/processhacker-(?:\S+)-bin.zip)
+[System Informer]
+folder = Tools\Monitor\System Informer
+url = https://systeminformer.sourceforge.io/nightly.php
+re_version = <p>Build: <span><strong>([\d.]+)</strong></span></p>
+re_download = href="(.*?releases/download/(?:\S+)/systeminformer-(?:\S+)-bin.zip)
 
 [ProcDOT]
 folder = Tools\Other\ProcDOT
@@ -27,5 +27,6 @@ re_download = href="(.*?/procdot_(?:\S+)_windows.zip)
 
 [FileInsight]
 folder = Tools\Other\FileInsight
-update_url = https://downloadcenter.mcafee.com/products/mcafee-avert/fileinsight.msi
+update_url = https://downloadcenter.trellix.com/products/mcafee-avert/fileinsight.msi
 from = http
+
