--- a/tools.ini
+++ b/tools.ini
@@ -31,3 +31,10 @@ folder = Tools\Other\FileInsight
 update_url = https://downloadcenter.trellix.com/products/mcafee-avert/fileinsight.msi
 from = http
 
+[AstroGrep]
+folder = Tools\Other\AstroGrep
+from = web
+url = https://sourceforge.net/projects/astrogrep/rss
+re_version = AstroGrep_v(.*?)_portable.zip
+update_url = https://sourceforge.net/projects/astrogrep/files/latest/download
+
